--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.4.4</version>
+		<version>2.5.4</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.albo</groupId>
@@ -20,6 +20,8 @@
 	
 	<properties>
 		<java.version>16</java.version>
+		<nombre.final>digitalizacion-backend</nombre.final>
+		<local.repository.folder>${pom.basedir}/local-maven-repo/</local.repository.folder>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<!-- INI Para despliegue -->
@@ -105,7 +107,7 @@
 		
 		<!-- driver bd oracle -->
 		<dependency>
-			<groupId>com.oracle</groupId>
+			<groupId>com.local.oracle</groupId>
 			<artifactId>ojdbc7</artifactId>
 			<version>12.1.0</version>
 		</dependency>
@@ -113,10 +115,32 @@
 	</dependencies>
 
 	<build>
+		<finalName>${nombre.final}</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			
+			<plugin>
+			    <groupId>org.apache.maven.plugins</groupId>
+			    <artifactId>maven-install-plugin</artifactId>
+			    <executions>
+			        <execution>
+			        	<id>oracle</id>
+			        	<phase>install</phase>
+			            <goals>
+			                <goal>install-file</goal>
+			            </goals>
+			            <configuration>
+				            <groupId>com.local.oracle</groupId>
+							<artifactId>ojdbc7</artifactId>
+							<version>12.1.0</version>
+			                <packaging>jar</packaging>
+			                <file>${local.repository.folder}/ojdbc7.jar</file>
+			            </configuration>
+			        </execution>
+			    </executions>
 			</plugin>
 		</plugins>
 	</build>
